--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.3.3",
     "core-js": "^3.6.5",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue-tailwind": "^2.4.2",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
@@ -22,13 +24,16 @@
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-prettier": "^6.0.0",
+    "autoprefixer": "^10.3.1",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.12.0",
+    "postcss": "^8.3.6",
     "prettier": "^2.2.1",
     "sass-loader": "^8.0.2",
+    "tailwindcss": "^2.2.7",
     "vue-template-compiler": "^2.6.11"
   }
 }
